# rtmf6

./: .gitignore  CONTRIBUTING.md  README.md  pixi.toml  pylintrc  pyproject.toml
benchmarks/: README.md
benchmarks/Appelo_Dimier/model/: postprocessing.ipynb  preprocessing.ipynb  rtmf6.toml  zones.txt
benchmarks/Appelo_Dimier/model/mf6/: appelo_uran.gwfgwt  appelo_uran.tdis  gwf_appelo_uran.chd  gwf_appelo_uran.dis  gwf_appelo_uran.ic  gwf_appelo_uran.ims  gwf_appelo_uran.nam  gwf_appelo_uran.npf  gwf_appelo_uran.oc  gwf_appelo_uran.wel  gwt_appelo_uran.adv  gwt_appelo_uran.dis  gwt_appelo_uran.dsp  gwt_appelo_uran.ic  gwt_appelo_uran.ims  gwt_appelo_uran.mst  gwt_appelo_uran.nam  gwt_appelo_uran.oc  gwt_appelo_uran.ssm  mfsim.nam
benchmarks/Appelo_Dimier/model/phreeqcrm/: advect.pqi  model.yaml
benchmarks/Appelo_Dimier/model/pht3d_results/: PHT3D009.UCN  PHT3D011.UCN  PHT3D012.UCN  PHT3D013.UCN
benchmarks/Appelo_Dimier/model/preprocess/: Appelo_and_Dimier.py  zones.txt
benchmarks/Appelo_Dimier/model/rtmf6/: init_equilibrium_phases.ic
benchmarks/Ex10/model/: K_field.txt  NAPL.txt  postprocessing.ipynb  preprocessing.ipynb  rtmf6.toml
benchmarks/Ex10/model/mf6/: ex10.gwfgwt  ex10.tdis  gwf_ex10.chd  gwf_ex10.ic  gwf_ex10.ims  gwf_ex10.nam  gwf_ex10.npf  gwf_ex10.oc  gwt_ex10.adv  gwt_ex10.dis  gwt_ex10.dsp  gwt_ex10.ic  gwt_ex10.ims  gwt_ex10.mst  gwt_ex10.nam  gwt_ex10.oc  gwt_ex10.ssm  mfsim.nam
benchmarks/Ex10/model/phreeqcrm/: advect.pqi  model.yaml
benchmarks/Ex10/model/pht3d_results/: PHT3D002.UCN  PHT3D006.UCN  PHT3D010.UCN  PHT3D016.UCN  PHT3D017.UCN  PHT3D021.UCN  PHT3D027.UCN  PHT3D028.UCN  PHT3D029.UCN
benchmarks/Ex10/model/rtmf6/: init_conc.ic  init_kinetics.ic
benchmarks/Ex10_dense/model/: postprocessing.ipynb  preprocessing.ipynb  rtmf6.toml
benchmarks/Ex10_dense/model/mf6/: ex10_dens.tdis  ex10_dens_s.gwfgwt  gwf_ex10_dens.buy  gwf_ex10_dens.dis  gwf_ex10_dens.ghb  gwf_ex10_dens.ic  gwf_ex10_dens.ims  gwf_ex10_dens.nam  gwf_ex10_dens.npf  gwf_ex10_dens.oc  gwf_ex10_dens.wel  gws_ex10_dens.dsp  gws_ex10_dens.ic  gws_ex10_dens.mst  gws_ex10_dens.nam  gws_ex10_dens.oc  gws_ex10_dens.ssm  gwt_ex10_dens.adv  gwt_ex10_dens.ims  gwt_ex10_dens.nam  gwt_ex10_dens.oc  gwt_ex10_dens.ssm  mfsim.nam
benchmarks/Ex10_dense/model/phreeqcrm/: _intermediate.yaml  advect.pqi
benchmarks/Ex10_dense/model/pht3d_results/: PHT3D001.UCN  PHT3D005.UCN  PHT3D007.UCN  PHT3D016.UCN  PHT3D017.UCN  PHT3D018.UCN  PHT3D020.UCN  PHT3D021.UCN  PHT3D022.UCN
benchmarks/Ex10_dense/model/seawat_results/: MT3D001.UCN
benchmarks/Ex10_simple/model/: postprocessing.ipynb  preprocessing.ipynb  rtmf6.toml
benchmarks/Ex10_simple/model/mf6/: ex10_simple.gwfgwt  ex10_simple.tdis  gwf_ex10_simple.chd  gwf_ex10_simple.dis  gwf_ex10_simple.ic  gwf_ex10_simple.ims  gwf_ex10_simple.nam  gwf_ex10_simple.npf  gwf_ex10_simple.oc  gwt_ex10_simple.adv  gwt_ex10_simple.dsp  gwt_ex10_simple.ic  gwt_ex10_simple.ims  gwt_ex10_simple.mst  gwt_ex10_simple.nam  gwt_ex10_simple.oc  gwt_ex10_simple.ssm  mfsim.nam
benchmarks/Ex10_simple/model/phreeqcrm/: _intermediate.yaml  advect.pqi  post.yaml  pre.yaml
benchmarks/Ex10_simple/model/pht3d_results/: PHT3D001.UCN  PHT3D005.UCN  PHT3D007.UCN  PHT3D016.UCN  PHT3D017.UCN  PHT3D018.UCN  PHT3D020.UCN  PHT3D021.UCN  PHT3D022.UCN
benchmarks/Ex10_simple/model/postprocessing/: Output.ipynb  get_equi_phase.py  plot.py
benchmarks/Ex10_simple/model/preprocessing/: Ex10_simple.py
benchmarks/Ex10_simple/model/rtmf6/: init_equilibrium_phases.ic  init_kinetics.ic
benchmarks/cation_exchange_1d/: Prepocess.ipynb  Results.ipynb  join.py
benchmarks/cation_exchange_1d/mf6/: MakeMF6Model.ipynb
benchmarks/cation_exchange_1d/mf6rtm/: sout.csv
benchmarks/cation_exchange_1d/pht3d/: MT3D.CNF  PHT3D001.XMAS  PHT3D002.MAS  PHT3D002.XMAS  PHT3D003.MAS  PHT3D004.MAS  PHT3D005.MAS  PHT3D006.XMAS  PHT3D007.MAS  PHT3D007.XMAS  PHT3D010.MAS
benchmarks/cation_exchange_1d/rtmf6/: rtmf6.toml
benchmarks/cation_exchange_1d/rtmf6/mf6/: cat_ex_1d.gwfgwt  cat_ex_1d.tdis  gwf_cat_ex_1d.chd  gwf_cat_ex_1d.ic  gwf_cat_ex_1d.ims  gwf_cat_ex_1d.npf  gwf_cat_ex_1d.oc  gwf_cat_ex_1d.wel  gwt_cat_ex_1d.dis  gwt_cat_ex_1d.dsp  mfsim.nam  (+5 more)
doc/schemas/: rtmf6_preprocessing.odg
docs/: Makefile  requirements.txt
docs/schemas/: rtmf6.odg  rtmf6_calculations.odg
docs/source/: autocopy.py  conf.py  getting_started.md  index.md  references.bib
docs/source/api/: index.md
docs/source/benchmarks/: index.md
docs/source/notebooks/: example.ipynb
docs/source/users_guide/: README.md  cli.md  index.md  installation.md  model_setup.md  rtmf6.toml
src/rtmf6/: __init__.py  _version.py  config.py  main.py  run.py
src/rtmf6/postprocessing/: __init__.py  output_reader.py  plot.py
src/rtmf6/preprocessing/: __init__.py  adjust_prefixes.py  create_inputs.py  flopy_setup.py  phreeqc_setup.py  simulation.py
src/rtmf6/resources/: fast.tdis
src/rtmf6/tools/: domain.py
tests/advect/model_creation/: clone_model.py  create_yaml.py  make_base_model.py  run_all_steps.py
tests/advect/run/: plot.py  run_advect.py
tests/advect_reactive/: rtmf6.toml
tests/advect_reactive/mf6/: advect10.gwfgwt  gwf_advect10.chd  gwf_advect10.ic  gwf_advect10.nam  gwf_advect10.npf  gwf_advect10.oc  gwf_advect10.sto  gwf_advect10.tdis  gwt_advect10.adv  gwt_advect10.dis  gwt_advect10.dsp  gwt_advect10.ic  gwt_advect10.ims  gwt_advect10.mst  gwt_advect10.nam  gwt_advect10.obs  gwt_advect10.oc  gwt_advect10.ssm  mfsim.nam
tests/advect_reactive/phreeqcrm/: advect.pqi  model.yaml  post.yaml  pre.yaml
tests/advect_reactive/rtmf6/: init_conc.ic
tests/model_creation/: clone_model.py  make_model.py  show_model_results.py
tests/phreeqpy/: advect.pqi  advect_cpp_exception.yaml  advect_error_code.yaml  advect_graceful_exit.yaml  create_yaml.py
tests/run/: run_advect.py
tests/test_cli/: conftest.py  test_main.py
tests/test_cnc_inactive/cation_exchange_1d_CNC_KINETIC/: Inactive.ipynb  Inspect_MF6.ipynb  error.inp  make_plot_CNC.py  rtmf6.toml
tests/test_cnc_inactive/cation_exchange_1d_cnc/: rtmf6.toml
(+65 files in other folders)
