[project]
name = "rtmf6"
description = "Reactive transport modeling with MODFLOW 6"
authors = [{name = "Mike Müller", email = "mmueller@hydrocomputing.com"}]
readme = "README.md"
requires-python = ">= 3.11"
keywords = [
    "MODFLOW6",
    "pymf6",
    "PHREEQC",
    "PhreeqcRM",
    "PhreeqPy",
    "groundwater",
    "modeling",
    "reactive transport"
    ]
license = {text = "MIT License"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Environment :: Console",
  "Framework :: Jupyter :: JupyterLab",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: Implementation :: CPython",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Hydrology"
]
dependencies = []
dynamic = ["version"]

[project.scripts]
rtmf6 = "rtmf6.main:main"

[build-system]
requires = ["setuptools", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests"]

[tool.setuptools.package-dir]
pymf6 = "src/rtmf6"

[tool.setuptools_scm]
write_to = "src/rtmf6/_version.py"


[tool.pixi.project]
channels = ["conda-forge", "hydrocomputing"]
platforms = ["osx-arm64"]

[tool.pixi.dependencies]
matplotlib = "*"
pandas = "*"
pymf6 = "*"

[tool.pixi.pypi-dependencies]
rtmf6 = { path = ".", editable = true }

[tool.pixi.feature.build.dependencies]
twine = ">=5.0.0,<5.1"
build = ">=0.7.0,<0.8"

[tool.pixi.feature.build.tasks]
build-wheel = "python -m build --wheel"
pypi-upload = "python -m  twine upload --config-file=/Users/mike/.pypirc_hydro"

[tool.pixi.feature.develop.dependencies]
jupyterlab = '*'

[tool.pixi.feature.develop.pypi-dependencies]
pymf6 = { path = "../pymf6", editable = true }
pymf6tools = { path = "../pymf6tools", editable = true }

[tool.pixi.feature.develop.tasks]
helper_exe = { cmd = "python", cwd = "tests" }
jupyter = { cmd = "jupyter-lab", cwd = "scratch" }
python_dev = "python"

[tool.pixi.feature.test.dependencies]
pytest = "*"
pytest-md = "*"

[tool.pixi.feature.test.tasks]
test = "pytest --md=report.md"

[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
build = { features = ["build"], solve-group = "default" }
develop = { features = ["develop"], solve-group = "default" }
