[project]
name = "rtmf6"
description = "Reactive transport modeling with MODFLOW 6"
authors = [{name = "Mike Müller", email = "mmueller@hydrocomputing.com"}]
readme = "README.md"
requires-python = ">= 3.11"
keywords = [
    "MODFLOW6",
    "pymf6",
    "PHREEQC",
    "PhreeqcRM",
    "PhreeqPy",
    "groundwater",
    "modeling",
    "reactive transport"
    ]
license = {text = "MIT License"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Environment :: Console",
  "Framework :: Jupyter :: JupyterLab",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: Implementation :: CPython",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Hydrology"
]
dependencies = []
dynamic = ["version"]

[project.scripts]
rtmf6 = "rtmf6.main:main"

[build-system]
requires = ["setuptools", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests"]

[tool.setuptools.package-dir]
pymf6 = "src/rtmf6"

[tool.setuptools_scm]
write_to = "src/rtmf6/_version.py"


[tool.pixi.workspace]
channels = ["hydrocomputing", "conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.dependencies]
python = "3.14.*"
matplotlib = "*"
pandas = "*"
pymf6 = "*"
phreeqcrm = "*"
# phreeqpy = "*"
gfortran = ">=15.2.0,<15.3"
ipython = ">=9.8.0,<10"
modflowapi = ">=0.3.0,<0.4"
pymf6-tools = ">=0.1.3,<0.2"
jupyterlab = ">=4.5.1,<5"
typer = ">=0.21.1,<0.22"

[tool.pixi.pypi-dependencies]
rtmf6 = { path = ".", editable = true }
phreeqpy = { path = "../../phreeqpy_project/phreeqpy", editable = true }
pymf6 = { path = "../pymf6", editable = true }
pymf6-tools = { path = "../pymf6-tools", editable = true }

[tool.pixi.feature.build.dependencies]
twine = ">=5.0.0,<5.1"
# build = ">=0.7.0,<1.0"

[tool.pixi.feature.build.tasks]
build-wheel = "python -m build --wheel"
pypi-upload = "python -m  twine upload --config-file=/Users/mike/.pypirc_hydro"

[tool.pixi.feature.develop.dependencies]
jupyterlab = '*'
yaml-cpp = '*'
flopy = ">=3.9.5,<4"
modflowapi = ">=0.3.0,<0.4"

[tool.pixi.feature.develop.pypi-dependencies]
# pymf6 = { path = "../pymf6", editable = true }
# pymf6-tools = { path = "../pymf6-tools", editable = true }
phreeqpy = { path = "../../phreeqpy_project/phreeqpy", editable = true }


[tool.pixi.feature.develop.tasks]
helper_exe = { cmd = "python", cwd = "tests" }
jupyter = { cmd = "jupyter-lab", cwd = "scratch" }
python_dev = "python"
python_phreepy = { cmd = "python", cwd = "tests/phreeqpy" }

[tool.pixi.feature.test.dependencies]
pytest = "*"
pytest-md = "*"
pytest-mock = ">=3.15.1,<4"

[tool.pixi.feature.test.tasks]
test = "pytest --md=report.md"

[tool.pixi.feature.docs.dependencies]
myst-parser = ">=3.0,<4"
sphinx = ">=7.0,<8"
myst-nb = ">=1.1,<2"
jupyterlab = ">=4.5.2,<5"
sphinx-autodoc-typehints = ">=2.0,<3"
furo = "*"
sphinx-copybutton = "*"
sphinx-design = "*"
sphinxcontrib-bibtex = "*"
ansi2html = ">=1.9.2,<2"

[tool.pixi.feature.docs.tasks]
docs-build = { cmd = "sphinx-build -b html source _build/html", cwd = "docs" }
docs-clean = { cmd = "rm -rf _build", cwd = "docs" }
docs-serve = { cmd = "python -m http.server -d _build/html 8907", cwd = "docs" }
docs-deploy = { cmd = "zsh deploy_docs.sh", cwd = "docs/.deploy" }

[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
build = { features = ["build"], solve-group = "default" }
develop = { features = ["develop"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }
