[project]
name = "rtmf6"
description = "Reactive transport modeling with MODFLOW 6 and PHREEQC 3"
authors = [{name = "Mike Müller", email = "mmueller@hydrocomputing.com"}]
readme = "README.md"
requires-python = ">= 3.11"
keywords = [
    "MODFLOW6",
    "pymf6",
    "PHREEQC",
    "PhreeqcRM",
    "PhreeqPy",
    "groundwater",
    "modeling",
    "reactive transport"
    ]
license = {text = "MIT License"}
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: MacOS :: MacOS X",
  "Topic :: Scientific/Engineering :: Hydrology"
]
dependencies = ["pymf6", "phreeqpy"]
dynamic = ["version"]

[project.scripts]
rtmf6 = "rtmf6.main:main"

[build-system]
requires = ["setuptools", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests"]

[tool.setuptools.package-dir]
pymf6 = "src/rtmf6"

[tool.setuptools_scm]
write_to = "src/rtmf6/_version.py"
